<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bluetoothsample.view.SampleBtActivity">

    <LinearLayout
            android:id="@+id/item_device"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_device"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/tv_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textSize="16sp"
                tools:text="[xx:xx:xx] Evian001" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/item_status"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_device">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_status"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@string/disconnected" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_status">

        <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scan" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_connect"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_search">

        <Button
                android:id="@+id/btn_connect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/connect" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_disconnect"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_connect">

        <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/disconnect" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_send_cmd"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_disconnect">

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical" />

        <Button
                android:id="@+id/btn_send_cmd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/send_AT_cmd" />
    </LinearLayout>

    <TextView
            android:id="@+id/search_status"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/found_device"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/ll_send_cmd" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/found_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/search_status" />


    <LinearLayout
            android:id="@+id/item_send_cmd_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/found_device">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cmd_sent_result"
                android:textSize="16sp" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="60dp">

            <TextView
                    android:id="@+id/tv_send_cmd_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="16sp"
                    tools:text="result...." />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/item_notify_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_send_cmd_result">

        <TextView
                android:id="@+id/tv_data_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notify_data"
                android:textSize="16sp" />

        <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>